Saved version from zim

--- a/wiki/扩展技能/NodeJs学习/NodeJs和数据库.html
+++ b/wiki/扩展技能/NodeJs学习/NodeJs和数据库.html
@@ -119,7 +119,6 @@
 		<div id="navigation"> <ul>
 <li><a href="../../Journal.html" title="Journal" class="page">Journal</a></li>
 <li><a href="../../%E4%B8%93%E4%B8%9A%E6%8A%80%E8%83%BD.html" title="专业技能" class="page">专业技能</a></li>
-<li><a href="../../%E5%85%AC%E5%8F%B8%E8%B5%84%E6%96%99.html" title="公司资料" class="page">公司资料</a></li>
 <li><a href="../../%E5%AD%A6%E4%B9%A0%E8%B5%84%E6%BA%90%E5%BA%93.html" title="学习资源库" class="page">学习资源库</a></li>
 <li><a href="../../%E6%89%A9%E5%B1%95%E6%8A%80%E8%83%BD.html" title="扩展技能" class="page">扩展技能</a></li>
 <ul>
@@ -145,8 +144,25 @@
 			<p>
 Created Tuesday 10 January 2017<br>
 1、连接mysql示例<br>
+<a href="http://www.cnblogs.com/cnshen/p/6272541.html" title="http://www.cnblogs.com/cnshen/p/6272541.html" class="http">http://www.cnblogs.com/cnshen/p/6272541.html</a><br>
 </p>
 
+
+
+<p>
+nasPortId<br>
+</p>
+
+<p>
+<a href="https://wlan.ct10000.com/?basetype=3&nasPortId=lag-1:660.897&UserInputURL=http://hao.360.cn/?1004&nasIp=124.74.56.155" title="https://wlan.ct10000.com/?basetype=3&amp;nasPortId=lag-1:660.897&amp;UserInputURL=http://hao.360.cn/?1004&amp;nasIp=124.74.56.155" class="https">https://wlan.ct10000.com/?basetype=3&amp;nasPortId=lag-1:660.897&amp;UserInputURL=http://hao.360.cn/?1004&amp;nasIp=124.74.56.155</a><br>
+</p>
+
+<p>
+常用框架	<br>
+<a href="http://blog.csdn.net/sanqian007/article/details/46467691" title="http://blog.csdn.net/sanqian007/article/details/46467691" class="http">http://blog.csdn.net/sanqian007/article/details/46467691</a><br>
+restful协议1框架<br>
+<a href="http://mcavage.me/node-restify/" title="http://mcavage.me/node-restify/" class="http">http://mcavage.me/node-restify/</a><br>
+</p>
 
 
 			<br>
